<resources>
    <string name="app_name">Ejercicio01</string>
    <string name="Bienvenida">Bienvenido a NotaFinal</string>
    <string name="resultado">Nota Final: </string>
    <string name="hint_nombre">Nombre Completo</string>
    <string name="hint_input">Nota 1</string>
    <string name="hint_input2">Nota 2</string>
    <string name="hint_input3">Nota 3</string>
    <string name="hint_input4">Nota 4</string>
    <string name="hint_input5">Nota 5</string>
    <string name="calcular">Calcular</string>
</resources>